objects/SVMXC__Route_Card__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Route card contains high-level information about a product&apos;s journey through the repair process. Separate route cards are created for inbound (to repair) and outbound (to customer) journeys of a product</description>
    <fields>
        <fullName>SVMXC__Case_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the originating customer case line</description>
        <label>Case Line</label>
        <referenceTo>SVMXC__Case_Line__c</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the originating customer case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Current_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current stop in the route</description>
        <label>Current Stop</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Route Cards (Current Stop)</relationshipLabel>
        <relationshipName>Route_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the customer account that initiated the return</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__First_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First (initial) stop in the route</description>
        <label>First Stop</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Route Cards (First Stop)</relationshipLabel>
        <relationshipName>Route_Cards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last stop in the route</description>
        <label>Last Stop</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Route Cards (Last Stop)</relationshipLabel>
        <relationshipName>Route_Cards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Next_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Next step in the route</description>
        <label>Next Stop</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the original return order line (RMA Line)</description>
        <label>RMA Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the original return order (RMA)</description>
        <label>RMA</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>Route Cards</relationshipLabel>
        <relationshipName>Route_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Route_Type__c</fullName>
        <description>Type of route. Inbound indicates product being returned for repair. Outbound indicates product being returned to customer after repair</description>
        <label>Route Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the supplier account that may perform the repair</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Cards (Supplier)</relationshipLabel>
        <relationshipName>Route_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Route Card</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>